--- a/Vendor Trash.cbp
+++ b/Vendor Trash.cbp
@@ -8,20 +8,19 @@
 		<Build>
 			<Target title="Release">
 				<Option platforms="Windows;" />
-				<Option output="bin\Release\VendorTrash.exe" prefix_auto="1" extension_auto="0" />
-				<Option working_dir="" />
-				<Option object_output="obj\Release\" />
-				<Option type="5" />
+				<Option output="bin/Release/VendorTrash.exe" prefix_auto="1" extension_auto="0" />
+				<Option object_output="obj/Release/" />
+				<Option type="0" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-fexpensive-optimizations" />
 					<Add option="-O2" />
 					<Add option="-w" />
-					<Add directory="..\..\SDL\include\SDL" />
-					<Add directory="..\..\SDL\SDL_image\include" />
-					<Add directory="..\..\SDL\SDL_mixer\include" />
-					<Add directory="..\..\SDL\SDL_ttf\include" />
-					<Add directory="..\..\MinGW\lib" />
+					<Add directory="../../SDL/include/SDL" />
+					<Add directory="../../SDL/SDL_image/include" />
+					<Add directory="../../SDL/SDL_mixer/include" />
+					<Add directory="../../SDL/SDL_ttf/include" />
+					<Add directory="../../MinGW/lib" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -35,7 +34,7 @@
 					<Add library="..\..\SDL\SDL_image\lib\SDL_image.lib" />
 					<Add library="..\..\SDL\SDL_mixer\lib\SDL_mixer.lib" />
 					<Add library="..\..\SDL\SDL_ttf\lib\SDL_ttf.lib" />
-					<Add directory="..\..\SDL\lib" />
+					<Add directory="../../SDL/lib" />
 				</Linker>
 			</Target>
 			<Target title="Release-Linux">
@@ -47,8 +46,8 @@
 				<Compiler>
 					<Add option="-fexpensive-optimizations" />
 					<Add option="-O3" />
-					<Add directory="\usr\include\SDL\" />
-					<Add directory="\usr\include\" />
+					<Add directory="/usr/include/SDL/" />
+					<Add directory="/usr/include/" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -59,17 +58,17 @@
 					<Add library="\usr\lib64\libSDL_image.so" />
 					<Add library="\usr\lib64\libSDL_mixer.so" />
 					<Add library="\usr\lib64\libSDL_ttf.so" />
-					<Add directory="\usr\lib64\" />
+					<Add directory="/usr/lib64/" />
 				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
-			<Add directory="..\..\SDL-1.2.13\include\SDL" />
-			<Add directory="..\..\SDL-1.2.13\SDL_image-1.2.7\include" />
-			<Add directory="..\..\SDL-1.2.13\SDL_mixer-1.2.8\include" />
-			<Add directory="..\..\SDL-1.2.13\SDL_ttf-2.0.9\include" />
-			<Add directory="..\..\MinGW\lib" />
+			<Add directory="../../SDL-1.2.13/include/SDL" />
+			<Add directory="../../SDL-1.2.13/SDL_image-1.2.7/include" />
+			<Add directory="../../SDL-1.2.13/SDL_mixer-1.2.8/include" />
+			<Add directory="../../SDL-1.2.13/SDL_ttf-2.0.9/include" />
+			<Add directory="../../MinGW/lib" />
 		</Compiler>
 		<Unit filename="MersenneTwister.h" />
 		<Unit filename="Vendor Trash.rc">
